--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "studies-schedule",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vscgabriel.github.io/studies-schedule",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -22,7 +23,9 @@
     "start:unix": "./scripts/bat/start-windows.sh",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -66,6 +69,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "gh-pages": "^6.1.1",
     "metro-react-native-babel-preset": "^0.71.3",
     "prettier": "^2.6.2",
     "react-app-rewired": "^2.2.1",
