--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "private": true,
   "homepage": "https://vscgabriel.github.io/studies-schedule",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.28",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^16.11.21",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "classname": "^0.0.0",
+    "classnames": "^2.3.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.4.3",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start:windows": "./scripts/bat/start-windows.bat",
     "start:unix": "./scripts/bat/start-windows.sh",
-    "build": "react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -46,33 +50,34 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.1",
-    "sass": "^1.42.1",
-    "typescript-plugin-css-modules": "^3.4.0",
     "@babel/core": "^7.18.9",
     "@babel/eslint-parser": "^7.18.9",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-root-import": "^6.6.0",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "gh-pages": "^6.1.1",
     "metro-react-native-babel-preset": "^0.71.3",
     "prettier": "^2.6.2",
     "react-app-rewired": "^2.2.1",
-    "ts-import-plugin": "^2.0.0"
+    "sass": "^1.42.1",
+    "ts-import-plugin": "^2.0.0",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
